--- a/about.html
+++ b/about.html
@@ -153,60 +153,42 @@
         <div class="container">
           <div class="row row-50 justify-content-center">
             <div class="col-md col-12 text-center">
-              <div class="section-name wow fadeInRight" data-wow-delay=".2s">People Behind Our Success</div>
-              <h3 class="wow fadeInLeft text-capitalize" data-wow-delay=".3s">Meet Our<span class="text-primary"> Team</span></h3>
+              <div class="section-name wow fadeInRight" data-wow-delay=".2s">Influence</div>
+              <h3 class="wow fadeInLeft text-capitalize" data-wow-delay=".3s">People Who<span class="text-primary"> Inspires Me</span></h3>
               <p class="block-675">Mi proin sed libero enim sed faucibus. Metus dictum at tempor commodo. Viverra justo nec ultrices dui sapien eget mi. Eget felis eget nunc lobortis.</p>
             </div>
           </div>
           <div class="row row-50 justify-content-center">
             <div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="team-classic-wrap">
-                <div class="team-classic-img"><img src="images/team-classic-1-370x397.jpg" alt="" width="370" height="198"/>
+                <div class="team-classic-img"><img src="images/TealSwan.jpg" alt="" width="370" height="198"/>
                 </div>
                 <div class="block-320 text-center">
-                  <h4 class="font-weight-bold">William Johnson</h4><span class="d-block">CEO, Founder</span>
-                  <p>Placerat duis ultricies lacus sed turpis tincidunt id aliquet. Et pharetra pharetra massa massa ultricies.</p>
+                  <h4 class="font-weight-bold">Teal Swan</h4><a href="https://www.tealswan.com" target="_blank">www.tealswan.com</a>
+                  <p>International Speaker and Best-Selling Author is a survivor of severe childhood abuse.</p>
                   <hr class="offset-top-40"/>
-                  <ul class="justify-content-center social-links offset-top-30">
-                    <li><a class="fa fa-linkedin" href="#"></a></li>
-                    <li><a class="fa fa fa-twitter" href="#"></a></li>
-                    <li><a class="fa fa-facebook" href="#"></a></li>
-                    <li><a class="fa fa-instagram" href="#"></a></li>
-                  </ul>
                 </div>
               </div>
             </div>
             <div class="col-xl-4 col-sm-6 col-10 wow fadeInUp" data-wow-delay=".3s">
               <div class="team-classic-wrap">
-                <div class="team-classic-img"><img src="images/team-classic-2-370x397.jpg" alt="" width="370" height="198"/>
+                <div class="team-classic-img"><img src="images/DrBruceLipton.jpg" alt="" width="370" height="198"/>
                 </div>
                 <div class="block-320 text-center">
-                  <h4 class="font-weight-bold">Jane McMillan</h4><span class="d-block">Business Advisor</span>
-                  <p>Ut morbi tincidunt augue interdum velit. Sed euismod nisi porta lorem nisl rhoncus mattis rhoncus urna sed.</p>
+                  <h4 class="font-weight-bold">dr Bruce Lipton</h4><a href="https://www.brucelipton.com" target="_blank">www.brucelipton.com</a>
+                  <p>Internationally recognized leader in bridging science and spirit.</p>
                   <hr class="offset-top-40"/>
-                  <ul class="justify-content-center social-links offset-top-30">
-                    <li><a class="fa fa-linkedin" href="#"></a></li>
-                    <li><a class="fa fa fa-twitter" href="#"></a></li>
-                    <li><a class="fa fa-facebook" href="#"></a></li>
-                    <li><a class="fa fa-instagram" href="#"></a></li>
-                  </ul>
                 </div>
               </div>
             </div>
             <div class="col-xl-4 col-sm-6 col-10 wow fadeInRight" data-wow-delay=".3s">
               <div class="team-classic-wrap">
-                <div class="team-classic-img"><img src="images/team-classic-3-370x397.jpg" alt="" width="370" height="198"/>
+                <div class="team-classic-img"><img src="images/DrShaminiJain.jpg" alt="" width="370" height="198"/>
                 </div>
                 <div class="block-320 text-center">
-                  <h4 class="font-weight-bold">Robert Smith</h4><span class="d-block">Marketing Manager</span>
-                  <p>Vitae aliquet nec ullamcorper sit amet risus nullam eget felis. Euismod lacinia at quis risus sed vulputate.</p>
+                  <h4 class="font-weight-bold">Dr Shamini Jain</h4><a href="https://www.shaminijain.com" target="_blank">www.shaminijain.com</a>
+                  <p>Clinical psychologist, scientist, and founder and CEO of the Consciousness and Healing Initiative (CHI).</p>
                   <hr class="offset-top-40"/>
-                  <ul class="justify-content-center social-links offset-top-30">
-                    <li><a class="fa fa-linkedin" href="#"></a></li>
-                    <li><a class="fa fa fa-twitter" href="#"></a></li>
-                    <li><a class="fa fa-facebook" href="#"></a></li>
-                    <li><a class="fa fa-instagram" href="#"></a></li>
-                  </ul>
                 </div>
               </div>
             </div>
