--- a/index.html
+++ b/index.html
@@ -186,18 +186,7 @@
         </div>
         <div class="image-left-side wow slideInRight" data-wow-delay=".5s">
 		<img src="images/home-2-636x480.jpg" alt="" width="636" height="600"/> 
-<!--<video id="mediairlovtps1_video" class="_3vVMz" 
-	role="presentation" 
-	crossorigin="ChooseFrequency" 
-	playsinline="" 
-	preload="auto" 
-	muted="" 
-	loop="" 
-	tabindex="-1" 
-	autoplay="" 
-	src="https://letitgotarot.com/assets/img/ChooseFrequency.wmv" 
-	style="height: 100%; width: 100%; object-fit: cover; object-position: center center; opacity: 1;">
-</video>-->
+
 
 
         </div>
@@ -223,7 +212,7 @@
                 <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">39</span></div>
                 <div class="pricing-box-label bg-gray">once</div>
                 <p>Verifying goals <br> Setting Up Strategy <br> Zoom meeting</p>
-				<a class="button button-190 button-circle btn-primary-rounded" href="#">get started</a>
+				<a class="button button-190 button-circle btn-primary-rounded" href="contacts.html">get started</a>
               </div>
             </div>
             <div class="col-xl-4 col-md-6 col-12 wow fadeInUp" data-wow-delay=".4s">
@@ -234,7 +223,7 @@
                 <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">69</span></div>
                 <div class="pricing-box-label bg-gray-primary-light">1 session</div>
                 <p>Reprogramming Subconscious Mind <br> Inviting Abundance To Life <br> Zoom meeting</p>
-				<a class="button button-190 button-circle btn-rounded-outline" href="#">get started</a>
+				<a class="button button-190 button-circle btn-rounded-outline" href="contacts.html">get started</a>
               </div>
             </div>
             <div class="col-xl-4 col-md-6 col-12 wow fadeInDown" data-wow-delay=".3s">
@@ -245,7 +234,7 @@
                 <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">299</span></div>
                 <div class="pricing-box-label bg-gray">5 sessions</div>
                 <p>Creating a new reality <br> Enhancing Spiritual Gifts <br> Zoom meetings</p>
-				<a class="button button-190 button-circle btn-primary-rounded" href="#">get started</a>
+				<a class="button button-190 button-circle btn-primary-rounded" href="contacts.html">get started</a>
               </div>
             </div>
           </div>
@@ -258,13 +247,14 @@
             <div class="col-xl-10">
               <div class="section-name wow fadeInRight text-center" data-wow-delay=".2s">testimonials</div>
               <h3 class="wow fadeInLeft text-capitalize text-center" data-wow-delay=".3s">What People Say<span class="text-primary"> About My Work</span></h3>
+			  <p style="text-align: center;">Due to the guarantee of full confidentiality, I do not use my clients surnames or pictures below.</p>
               <div class="owl-carousel review-carousel" data-items="1" data-sm-items="1" data-md-items="1" data-lg-items="1" data-xl-items="1" data-xxl-items="1" data-dots="true" data-nav="false" data-stage-padding="0" data-loop="false" data-margin="0" data-mouse-drag="true" data-autoplay="false">
                 <div class="item">
                   <div class="item-preview wow fadeInDown" data-wow-delay=".2s"><img src="images/marguerite.jpg" alt="" width="216" height="108"/>
                   </div>
                   <div class="item-description wow fadeInUp" data-wow-delay=".3s">
                     <p>I appreciate what you’ve done to help my small company develop and thrive in that market niche that we specialize in. Your business consulting experts are the best in the whole industry and I’m going to recommend you to my partners!</p>
-                    <div class="item-subsection"><span class="item-subsection-title devider-left">David</span><span>Client</span></div>
+                    <div class="item-subsection"><span class="item-subsection-title devider-left">Edina</span><span>Client</span></div>
                   </div>
                 </div>
                 <div class="item">
@@ -281,8 +271,11 @@
                   <div class="item-preview wow fadeInDown" data-wow-delay=".2s"><img src="images/flower.jpg" alt="" width="216" height="108"/>
                   </div>
                   <div class="item-description wow fadeInUp" data-wow-delay=".3s">
-                    <p>Two years after СonsultBiz’s involvement, we are remarkably successful and the leader in served markets. This brought industry knowledge, best practices, and real-world solutions to the intricate challenges we faced.</p>
-                    <div class="item-subsection"><span class="item-subsection-title devider-left">Jennifer Coleman</span><span>Client</span></div>
+                    <p>I have enjoyed one to one sessions with Gosia to date.
+					   I have experienced benefit from these sessions including a renewed sense of self and self belief.
+					   I feel that we are sharing a valuable learning experience which will be of benefit to both of us.
+					</p>
+                    <div class="item-subsection"><span class="item-subsection-title devider-left">David</span><span>Client</span></div>
                   </div>
                 </div>
               </div>
