--- a/contacts.html
+++ b/contacts.html
@@ -93,7 +93,7 @@
           <div class="row justify-content-center">
             <div class="col-xl-8 text-center">
               <h1 class="font-weight-bold wow fadeInLeft">Contact Me</h1>
-			  <h3 class="font-weight-bold wow fadeInLeft">call: +44 7758748210</h3>
+			  <h3 class="font-weight-bold wow fadeInLeft">call: +44 7758748210</h3></br></br>
               <h3 class="font-weight-bold wow fadeInLeft">or send your question below</h3>
 			  <p class="intro-description wow fadeInRight">I mostly respond within 24 hours.</p>
             </div>
@@ -124,9 +124,9 @@
                   <textarea class="form-input" id="contact-message" name="message" data-constraints="@Required"></textarea>
                 </div>
                 <!--Google captcha-->
-               <!-- <div class="form-wrap text-left form-validation-left">
-                  <div class="recaptcha" id="captcha1" data-sitekey="6LfZlSETAAAAAC5VW4R4tQP8Am_to4bM3dddxkEt"></div>
-                </div>-->
+                <div class="form-wrap text-left form-validation-left">
+                  <div class="recaptcha" id="captcha1" data-sitekey="6LeW0e4hAAAAAIzPf6U0JmlROpOVqoP4ROs5z926"></div>
+                </div>
                 <div class="form-button group-sm text-center text-lg-left">
                   <button class="button button-primary" type="submit">Send</button>
                 </div>
