--- a/contacts.html
+++ b/contacts.html
@@ -124,11 +124,15 @@
                   <textarea class="form-input" id="contact-message" name="message" data-constraints="@Required"></textarea>
                 </div>
                 <!--Google captcha-->
-                <div class="form-wrap text-left form-validation-left">
+                <!--<div class="form-wrap text-left form-validation-left">
                   <div class="recaptcha" id="captcha1" data-sitekey="6LeW0e4hAAAAAIzPf6U0JmlROpOVqoP4ROs5z926"></div>
-                </div>
-                <div class="form-button group-sm text-center text-lg-left">
-                  <button class="button button-primary" type="submit">Send</button>
+                </div>-->
+				<div class="form-button group-sm text-center text-lg-left">
+                  
+					<button class="button button-primary g-recaptcha" 
+					data-sitekey="6LeW0e4hAAAAAIzPf6U0JmlROpOVqoP4ROs5z926" 
+					data-callback='onSubmit' 
+					data-action='submit' type="submit">Submit</button>
                 </div>
               </form>
             </div>
@@ -164,5 +168,11 @@
     <div class="snackbars" id="form-output-global"></div>
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
+	<script src="https://www.google.com/recaptcha/api.js"></script>
+	 <script>
+	   function onSubmit(token) {
+		 document.getElementById("demo-form").submit();
+	   }
+	 </script>
   </body>
 </html>
