--- a/contacts.html
+++ b/contacts.html
@@ -129,7 +129,7 @@
                 </div>-->
 				<div class="form-button group-sm text-center text-lg-left">
                   
-					<button class="button button-primary" onClick="onClick()" type="submit">Submit</button>
+					<button class="button button-primary" onClick="onClick(this)" type="submit">Submit</button>
                 </div>
               </form>
             </div>
