--- a/about.html
+++ b/about.html
@@ -106,9 +106,9 @@
               <div class="offset-top-45 offset-lg-right-45">
                 <div class="section-name wow fadeInRight" data-wow-delay=".2s">About</div>
                 <h3 class="wow fadeInLeft text-capitalize" data-wow-delay=".3s">A Few Words<span class="text-primary"> about me</span></h3>
-                <p class="font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam fermentum nulla ac tincidunt malesuada. Sed volutpat semper elit quis pharetra. Etiam sodales a sem vitae fermentum.</p>
-                <p class="wow fadeInUp" data-wow-delay=".4s">Sapien eget mi proin sed libero enim sed faucibus turpis. Placerat in egestas erat imperdiet sed euismod nisi. Vulputate eu scelerisque felis imperdiet. Lorem donec massa sapien faucibus. Volutpat diam.</p>
-                <p class="wow fadeInUp" data-wow-delay=".4s">Adipiscing enim eu turpis egestas pretium aenean pharetra magna. Nullam non nisi est sit amet facilisis magna etiam. Nec feugiat in fermentum posuere urna nec.</p>
+                <p class="font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I had my spiritual awakening a few years ago. The process can break you or make you. I chose the second option and decided to help people, to follow this path too.</p>
+                <p class="wow fadeInUp" data-wow-delay=".4s">The rewards can be tremendous. It happens spontaneously (without our control) to awaken us to our greatest potential and when we embrace it we can achieve unthinkable things.</p>
+                <p class="wow fadeInUp" data-wow-delay=".4s">I have a calling to use my journey and help people to pave their own. Falling in love with all it is and learning to enjoy the process is a key to heaven's gates. Let me take you there. Our emotions are the compass.</p>
                 <p class="wow fadeInUp" data-wow-delay=".4s">Below you can find the scale of how I would present where I am with the highest feeling vibrations. There is still room for improvement. And that I like the most.</p>
                 <div class="offset-top-20">
                   <!--Linear progress bar-->
@@ -132,7 +132,7 @@
                   <!--Linear progress bar-->
                   <article class="progress-linear">
                     <div class="progress-header progress-header-simple">
-                      <p>Love/Passion</p><span class="progress-value">90</span>
+                      <p>Love/Passion</p><span class="progress-value">95</span>
                     </div>
                     <div class="progress-bar-linear-wrap">
                       <div class="progress-bar-linear"></div>
@@ -148,14 +148,14 @@
           </div>
         </div>
       </section>
-      <!-- Our team-->
+      <!-- Influence -->
       <section class="section section-md">
         <div class="container">
           <div class="row row-50 justify-content-center">
             <div class="col-md col-12 text-center">
               <div class="section-name wow fadeInRight" data-wow-delay=".2s">Influence</div>
               <h3 class="wow fadeInLeft text-capitalize" data-wow-delay=".3s">People Who<span class="text-primary"> Inspires Me</span></h3>
-              <p class="block-675">Mi proin sed libero enim sed faucibus. Metus dictum at tempor commodo. Viverra justo nec ultrices dui sapien eget mi. Eget felis eget nunc lobortis.</p>
+              <p class="block-675">The journey of healing is never easy but with a mentor, it can get different meanings and unveil a new World.</p>
             </div>
           </div>
           <div class="row row-50 justify-content-center">
