--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <div class="col-xl-10">
               <div class="section-name wow fadeInRight text-center" data-wow-delay=".2s">testimonials</div>
               <h3 class="wow fadeInLeft text-capitalize text-center" data-wow-delay=".3s">What People Say<span class="text-primary"> About My Work</span></h3>
-			  <p style="text-align: center;">Due to the guarantee of full confidentiality, I do not use my clients surnames or pictures below.</p>
+			  <p style="text-align: center;">Due to the guarantee of full confidentiality, I did not use my clients surnames or pictures below.</p>
               <div class="owl-carousel review-carousel" data-items="1" data-sm-items="1" data-md-items="1" data-lg-items="1" data-xl-items="1" data-xxl-items="1" data-dots="true" data-nav="false" data-stage-padding="0" data-loop="false" data-margin="0" data-mouse-drag="true" data-autoplay="false">
                 <div class="item">
                   <div class="item-preview wow fadeInDown" data-wow-delay=".2s"><img src="images/marguerite.jpg" alt="" width="216" height="108"/>
