--- a/about.html
+++ b/about.html
@@ -103,14 +103,14 @@
         <div class="container">
           <div class="row row-40 justify-content-center">
             <div class="col-lg-6 col-12">
-              <div class="offset-top-45 offset-lg-right-45">
-                <div class="section-name wow fadeInRight" data-wow-delay=".2s">About</div>
+              <div class="offset-lg-right-45">
+                <!--<div class="section-name wow fadeInRight" data-wow-delay=".2s">About</div>-->
                 <h3 class="wow fadeInLeft text-capitalize" data-wow-delay=".3s">A Few Words<span class="text-primary"> about me</span></h3>
-                <p class="font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I had my spiritual awakening a few years ago. The process can break you or make you. I chose the second option and decided to help people, to follow this path too.</p>
+                <p class="wow fadeInUp" data-wow-delay=".4s">I had my spiritual awakening a few years ago. The process can break you or make you. I chose the second option and decided to help people, to follow this path too.</p>
                 <p class="wow fadeInUp" data-wow-delay=".4s">The rewards can be tremendous. It happens spontaneously (without our control) to awaken us to our greatest potential and when we embrace it we can achieve unthinkable things.</p>
                 <p class="wow fadeInUp" data-wow-delay=".4s">I have a calling to use my journey and help people to pave their own. Falling in love with all it is and learning to enjoy the process is a key to heaven's gates. Let me take you there. Our emotions are the compass.</p>
                 <p class="wow fadeInUp" data-wow-delay=".4s">Below you can find the scale of how I would present where I am with the highest feeling vibrations. There is still room for improvement. And that I like the most.</p>
-                <div class="offset-top-20">
+                <div>
                   <!--Linear progress bar-->
                   <article class="progress-linear">
                     <div class="progress-header progress-header-simple">
@@ -139,6 +139,7 @@
                     </div>
                   </article>
                 </div>
+				<p class="font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I know one thing for sure. We create our own reality using thoughts as creative emitters/signals and emotions as a transmitter. We are designed for success, shaped by the matrix of challenges that can become opportunities when we change our perspective and use it for our advantage. </p>
               </div>
             </div>
             <div class="col-lg-6 col-sm-10 col-12">
@@ -154,7 +155,7 @@
           <div class="row row-50 justify-content-center">
             <div class="col-md col-12 text-center">
               <div class="section-name wow fadeInRight" data-wow-delay=".2s">Influence</div>
-              <h3 class="wow fadeInLeft text-capitalize" data-wow-delay=".3s">People Who<span class="text-primary"> Inspires Me</span></h3>
+              <h3 class="wow fadeInLeft text-capitalize" data-wow-delay=".3s">People Who<span class="text-primary"> Inspire Me</span></h3>
               <p class="block-675">The journey of healing is never easy but with a mentor, it can get different meanings and unveil a new World.</p>
             </div>
           </div>
