--- a/contacts.html
+++ b/contacts.html
@@ -121,7 +121,7 @@
                 </div>
                 <div class="form-wrap">
                   <label class="form-label label-textarea" for="contact-message">Message<span class="req-symbol">*</span></label>
-                  <textarea class="form-input" id="contact-message" name="message" data-constraints="@Required"></textarea>
+                  <textarea class="form-input" id="contact-message" name="message" data-constraints="@Required" rows="10"></textarea>
                 </div>
                 <!--Google captcha-->
                 <!--<div class="form-wrap text-left form-validation-left">
