--- a/index.html
+++ b/index.html
@@ -135,11 +135,22 @@
               </div>
             </div>
             <div class="col-lg-6 col-12">
-              <div class="block-sm offset-top-45">
-                <div class="section-name wow fadeInRight" data-wow-delay=".2s">About us</div>
+              <div class="block-sm">
+                <div class="section-name wow fadeInRight" data-wow-delay=".2s">About me</div>
                 <h3 class="wow fadeInLeft text-capitalize devider-bottom" data-wow-delay=".3s">What I<span class="text-primary"> Do</span></h3>
-                <p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">Small or big, your business will love our financial help and business consultations! We are happy when our clients are too... Actually, this is quite simple to achieve - because each time we help them in sorting out different accounting intricacies or save the day before filing the taxes, they are happy indeed! And so are we!</p>
-                <p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">We have over fifteen years of successful experience in financial sphere in the US business market.</p>
+                <p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
+					I started the journey of life with a lot of obstacles to overcome. 
+					And I learned eventually, how to turn them to my benefit. 
+					How to transmute pain into creativity and grow at my own pace towards whatever my imagination can take me to.   
+					I am certain that I am on my way to ascension and my guides want me to take as many people as possible with me to Earth in a new frequency.  
+					I have become a spiritual life coach. I help people who are going through an awakening. 
+					It might have been triggered by narcissistic abuse or painful experiences. 
+					I help my clients to refocus from trauma bonds, cognitive dissonances, or narcissistic abuse toward their potential and start exploring its true nature.</p>
+                <p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I am Accredited Elite Life Coach, Level 5, Certified by the IAPC&M</p>
+				<a href="https://coach-accreditation.services/" target="_blank">
+					<img src="images/IAPCM-Logo-_2020-update-RGB-web-large.png" alt="Girl in a jacket" width="500" height="600">
+					<div style="text-align: center;">www.coach-accreditation.services</div>
+				</a>
 				<a class="button-width-190 button-primary button-circle button-lg button offset-top-30" href="about.html">read more</a>
               </div>
             </div>
@@ -159,7 +170,10 @@
                 <div class="col-xl-6 wow fadeInUp" data-wow-delay=".2s">
                   <div class="box-default">
                     <div class="box-default-title">Hypnotherapy</div>
-                    <p class="box-default-description">Our services and solutions are built on business innovations.</p><span class="box-default-icon novi-icon icon-lg mercury-icon-lightbulb-gears"></span>
+                    <p class="box-default-description">Our subconscious (autopilot) is habitual. 
+													   To reprogram it we need to change habits by repeating new ones over time. 
+													   But there is an easier way. I can put you into trans where your brain will start producing theta brain waves (frequency) and reshape your beliefs system. 
+													   It is always fully controlled by you as you stay fully conscious. Free will is in play.</p><span class="box-default-icon novi-icon icon-lg mercury-icon-lightbulb-gears"></span>
                   </div>
                 </div>
                 <div class="col-xl-6 wow fadeInUp" data-wow-delay=".3s">
