--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 					<img src="images/IAPCM-Logo-_2020-update-RGB-web-large.png" alt="Girl in a jacket" width="500" height="600">
 					<div style="text-align: center;">www.coach-accreditation.services</div>
 				</a>
-				<a class="button-width-190 button-primary button-circle button-lg button offset-top-30" href="about.html">read more</a>
+				<div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
               </div>
             </div>
           </div>
