--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="col-xl-7 col-lg-7 col-12">
               <div class="section-name wow fadeInRight">features</div>
               <h3 class="text-capitalize devider-left wow fadeInLeft" data-wow-delay=".2s">What techniques<span class="text-primary"> I like to us</span></h3>
-              <p>With over 20 years of experience in business consulting, we have a lot to offer to our clients. Here are some reasons why companies worldwide choose us.</p>
+              <p>With years of experience in spiritual work and growth, I have a lot to offer to my clients. Here are some reasons why you might chose me as your coach.</p>
               <div class="row row-15">
                 <div class="col-xl-6 wow fadeInUp" data-wow-delay=".2s">
                   <div class="box-default">
@@ -179,19 +179,37 @@
                 <div class="col-xl-6 wow fadeInUp" data-wow-delay=".3s">
                   <div class="box-default">
                     <div class="box-default-title">Life Coaching</div>
-                    <p class="box-default-description">СonsultBiz works strategically to forge the best path for your business.</p><span class="box-default-icon novi-icon icon-lg mercury-icon-target-2"></span>
+                    <p class="box-default-description">
+						Going through life with pain, trauma, and generational curses is never easy. 
+						It can become a nightmare when we are not aware of our powers and spiritual gifts. 
+						We all are meant to experience joy and bliss by birthright. 
+						Only using these emotions we can create Heaven on Earth. 
+						I can show my clients patterns and ways to see and embrace this power.</p><span class="box-default-icon novi-icon icon-lg mercury-icon-target-2"></span>
                   </div>
                 </div>
                 <div class="col-xl-6 wow fadeInUp" data-wow-delay=".4s">
                   <div class="box-default">
                     <div class="box-default-title">Tarot</div>
-                    <p class="box-default-description">We employ the best consultants with more than 10 years of experience.</p><span class="box-default-icon novi-icon icon-lg mercury-icon-user"></span>
+                    <p class="box-default-description">
+						The tarot "fool journey" is the one I strongly believe we all are on. 
+						It is about jumping with faith and having experiences, the ones we want in fact. 
+						It is about life cycles. 
+						Learning to accept them and after closing one, choosing another in constant desire for growth. 
+						Tarot is a tool to connect with your spirit guides or your higher self. 
+						When we are guided we might learn quicker and experience more this lifetime.   </p><span class="box-default-icon novi-icon icon-lg mercury-icon-user"></span>
                   </div>
                 </div>
                 <div class="col-xl-6 wow fadeInUp" data-wow-delay=".5s">
                   <div class="box-default">
                     <div class="box-default-title">Counselling</div>
-                    <p class="box-default-description">Every project we work on is based on the creative solutions of any issues.</p><span class="box-default-icon novi-icon icon-lg mercury-icon-partners"></span>
+                    <p class="box-default-description">
+						There are no small problems. 
+						You are not meant to just deal with it. 
+						We are not designed to be strong and competitive. It is abuse. </br> 
+						We are here to be emotional, to explore, to learn. 
+						We are here to love and find out again that we are just all it is ... <span class="default-letter-spacing font-weight-bold ">Energy.</span></br>
+						Recognizing blockages and removing them from my client's system I find the most profound part of my work.		
+						</p><span class="box-default-icon novi-icon icon-lg mercury-icon-partners"></span>
                   </div>
                 </div>
               </div>
@@ -267,7 +285,7 @@
                   <div class="item-preview wow fadeInDown" data-wow-delay=".2s"><img src="images/marguerite.jpg" alt="" width="216" height="108"/>
                   </div>
                   <div class="item-description wow fadeInUp" data-wow-delay=".3s">
-                    <p>I appreciate what you’ve done to help my small company develop and thrive in that market niche that we specialize in. Your business consulting experts are the best in the whole industry and I’m going to recommend you to my partners!</p>
+                    <p>I appreciate what you’ve done to help my me to develop and thrive. Your way of working is the best for me in the whole industry and I’m going to recommend you to my firends!</p>
                     <div class="item-subsection"><span class="item-subsection-title devider-left">Edina</span><span>Client</span></div>
                   </div>
                 </div>
