--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 						We are not designed to be strong and competitive. It is abuse. </br> 
 						We are here to be emotional, to explore, to learn. 
 						We are here to love and find out again that we are just all it is ... <span class="default-letter-spacing font-weight-bold ">Energy.</span></br>
-						Recognizing blockages and removing them from my client's system I find the most profound part of my work.		
+						Recognizing blockages and removing them from my client's system, I find the most profound part of my work.		
 						</p><span class="box-default-icon novi-icon icon-lg mercury-icon-partners"></span>
                   </div>
                 </div>
