--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                   </div>
                   <div class="item-description wow fadeInUp" data-wow-delay=".3s">
                     <p>I appreciate what you’ve done to help my me to develop and thrive. Your way of working is the best for me in the whole industry and I’m going to recommend you to my firends!</p>
-                    <div class="item-subsection"><span class="item-subsection-title devider-left">Edina</span><span>Client</span></div>
+                    <div class="item-subsection"><span class="item-subsection-title devider-left">Elena</span><span>Client</span></div>
                   </div>
                 </div>
                 <div class="item">
