--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 					I started the journey of life with a lot of obstacles to overcome. 
 					And I learned eventually, how to turn them to my benefit. 
 					How to transmute pain into creativity and grow at my own pace towards whatever my imagination can take me to.   
-					I am certain that I am on my way to ascension and my guides want me to take as many people as possible with me to Earth in a new frequency.  
-					I have become a spiritual life coach. I help people who are going through an awakening. 
+					I am certain that I am on my way to ascension and my guides want me to take as many people as possible with me to the Earth of new frequency.  
+					I have become a <span class="default-letter-spacing font-weight-bold ">spiritual life coach</span>. I help people who are going through an awakening. 
 					It might have been triggered by narcissistic abuse or painful experiences. 
 					I help my clients to refocus from trauma bonds, cognitive dissonances, or narcissistic abuse toward their potential and start exploring its true nature.</p>
                 <p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I am Accredited Elite Life Coach, Level 5, Certified by the IAPC&M</p>
