--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
                 <p class="wow fadeInUp" data-wow-delay=".4s">My name is Gosia Witkowska. I had my spiritual awakening a few years ago. The process can break you or make you. I chose the second option and decided to help people, to follow this path too.</p>
                 <p class="wow fadeInUp" data-wow-delay=".4s">The rewards can be tremendous. It happens spontaneously (without our control) to awaken us to our greatest potential and when we embrace it we can achieve unthinkable things.</p>
                 <p class="wow fadeInUp" data-wow-delay=".4s">I have a calling to use my journey and help people to pave their own. Falling in love with all it is and learning to enjoy the process is a key to heaven's gates. Let me take you there. Our emotions are the compass.</p>
-                <p class="wow fadeInUp" data-wow-delay=".4s">Below you can find the scale of how I would present where I am with the highest feeling vibrations. There is still room for improvement. And that I like the most.</p>
+                <p class="wow fadeInUp" data-wow-delay=".4s">Below you can find the scale of how I would present myself with the highest emotional vibrations. There is still room for improvement. And that I like the most.</p>
                 <div>
                   <!--Linear progress bar-->
                   <article class="progress-linear">
