--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
                     </div>
                   </article>
                 </div>
-				<p class="font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I know one thing for sure. We create our own reality using thoughts as creative emitters/signals and emotions as a transmitter. We are designed for success, shaped by the matrix of challenges that can become opportunities when we change our perspective and use it for our advantage. </p>
+				<p class="font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I know one thing for sure. We create our own reality using our brain as an emitter of thoughts/signals and our heart as a amplifier with emotions. We are designed for success, shaped by the matrix of challenges that can become opportunities when we change our perspective and use it for our advantage. </p>
               </div>
             </div>
             <div class="col-lg-6 col-sm-10 col-12">
