--- a/index.html
+++ b/index.html
@@ -285,7 +285,10 @@
                   <div class="item-preview wow fadeInDown" data-wow-delay=".2s"><img src="images/marguerite.jpg" alt="" width="216" height="108"/>
                   </div>
                   <div class="item-description wow fadeInUp" data-wow-delay=".3s">
-                    <p>I appreciate what you’ve done to help my me to develop and thrive. Your way of working is the best for me in the whole industry and I’m going to recommend you to my firends!</p>
+                    <p> The most important part was that Gosia showed me how to be truly free and align with myself.
+						The hypnosis was really personal and opened my eyes to how to be free from my blocks and to recognize when I step into my traumas but also step out of them. 
+					    After the session, I felt I am healed. I would recommend Gosia as a Hypnotherapist.
+					</p>
                     <div class="item-subsection"><span class="item-subsection-title devider-left">Elena</span><span>Client</span></div>
                   </div>
                 </div>
