--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 						The hypnosis was really personal and opened my eyes to how to be free from my blocks and to recognize when I step into my traumas but also step out of them. 
 					    After the session, I felt I am healed. I would recommend Gosia as a Hypnotherapist.
 					</p>
-                    <div class="item-subsection"><span class="item-subsection-title devider-left">Elena</span><span>Client</span></div>
+                    <div class="item-subsection"><span class="item-subsection-title devider-left">Edina</span><span>Client</span></div>
                   </div>
                 </div>
                 <div class="item">
