--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
                     </div>
                   </article>
                 </div>
-				<p class="font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I know one thing for sure. We create our own reality using our brain as an emitter of thoughts and our heart as an amplifier using emotions to strengthen the signal. We are designed for success, shaped by the matrix of challenges that can become opportunities when we change our perspective and use it for our advantage. </p>
+				<p class="font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I know one thing for sure. We create our own reality using our brain as an emitter of thoughts and our heart as an amplifier using emotions to strengthen the signal. We are designed for success, shaped by the matrix of challenges that can become opportunities when we change our perspective and use it to our advantage. </p>
               </div>
             </div>
             <div class="col-lg-6 col-sm-10 col-12">
@@ -156,7 +156,7 @@
             <div class="col-md col-12 text-center">
               <div class="section-name wow fadeInRight" data-wow-delay=".2s">Influence</div>
               <h3 class="wow fadeInLeft text-capitalize" data-wow-delay=".3s">People Who<span class="text-primary"> Inspire Me</span></h3>
-              <p class="block-675">The journey of healing is never easy but with a mentor, it can get different meanings and unveil a new World.</p>
+              <p class="block-675">The journey of healing is never easy but with a mentor we can find different meanings and unveil a new World.</p>
             </div>
           </div>
           <div class="row row-50 justify-content-center">
@@ -166,7 +166,7 @@
                 </div>
                 <div class="block-320 text-center">
                   <h4 class="font-weight-bold">Teal Swan</h4><a href="https://www.tealswan.com" target="_blank">www.tealswan.com</a>
-                  <p>International Speaker and Best-Selling Author is a survivor of severe childhood abuse.</p>
+                  <p>International Speaker and Best-Selling Author. And a survivor of severe childhood abuse.</p>
                   <hr class="offset-top-40"/>
                 </div>
               </div>
