--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
 					I started the journey of life with a lot of obstacles to overcome. 
 					And I learned eventually, how to turn them to my benefit. 
-					How to transmute pain into creativity and grow at my own pace towards whatever my imagination can take me to.   
+					How to transmute pain into creativity and grow at my own pace towards wherever my imagination can take me.   
 					I am certain that I am on my way to ascension and my guides want me to take as many people as possible with me to the Earth of new frequency.  
 					I have become a <span class="default-letter-spacing font-weight-bold ">spiritual life coach</span>. I help people who are going through an awakening. 
 					It might have been triggered by narcissistic abuse or painful experiences. 
@@ -164,15 +164,15 @@
           <div class="row">
             <div class="col-xl-7 col-lg-7 col-12">
               <div class="section-name wow fadeInRight">features</div>
-              <h3 class="text-capitalize devider-left wow fadeInLeft" data-wow-delay=".2s">What techniques<span class="text-primary"> I like to us</span></h3>
-              <p>With years of experience in spiritual work and growth, I have a lot to offer to my clients. Here are some reasons why you might chose me as your coach.</p>
+              <h3 class="text-capitalize devider-left wow fadeInLeft" data-wow-delay=".2s">What techniques<span class="text-primary"> I like to use</span></h3>
+              <p>With years of experience in spiritual work and growth, I have a lot to offer to my clients. Here are some reasons why you might choose me as your coach.</p>
               <div class="row row-15">
                 <div class="col-xl-6 wow fadeInUp" data-wow-delay=".2s">
                   <div class="box-default">
                     <div class="box-default-title">Hypnotherapy</div>
                     <p class="box-default-description">Our subconscious (autopilot) is habitual. 
 													   To reprogram it we need to change habits by repeating new ones over time. 
-													   But there is an easier way. I can put you into trans where your brain will start producing theta brain waves (frequency) and reshape your beliefs system. 
+													   But there is an easier way. I can put you into trance where your brain will start producing theta brain waves (frequencies) and reshape your belief system. 
 													   It is always fully controlled by you as you stay fully conscious. Free will is in play.</p><span class="box-default-icon novi-icon icon-lg mercury-icon-lightbulb-gears"></span>
                   </div>
                 </div>
@@ -191,10 +191,10 @@
                   <div class="box-default">
                     <div class="box-default-title">Tarot</div>
                     <p class="box-default-description">
-						The tarot's "fool journey" is the one I strongly believe we all are on. 
+						The tarot's "fool's journey" is the one I strongly believe we all are on. 
 						It is about jumping with faith and having experiences, the ones we want in fact. 
 						It is about life cycles. 
-						Learning to accept them and after closing one, choosing another in constant desire for growth. 
+						Learning to accept them and after finishing one, choosing another in constant desire for growth. 
 						Tarot is a tool to connect with your spirit guides or your higher self. 
 						When we are guided we might learn quicker and experience more this lifetime.   </p><span class="box-default-icon novi-icon icon-lg mercury-icon-user"></span>
                   </div>
@@ -208,7 +208,7 @@
 						We are not designed to be strong and competitive. It is abuse. </br> 
 						We are here to be emotional, to explore, to learn. 
 						We are here to love and find out again that we are just all it is ... <span class="default-letter-spacing font-weight-bold ">Energy.</span></br>
-						Recognizing blockages and removing them from my client's system, I find as the most profound part of my work.		
+						Recognizing blockages and removing them from my client's system is, I find, the most profound part of my work.		
 						</p><span class="box-default-icon novi-icon icon-lg mercury-icon-partners"></span>
                   </div>
                 </div>
@@ -249,7 +249,7 @@
             </div>
             <div class="col-xl-4 col-md-6 col-12 wow fadeInUp" data-wow-delay=".4s">
               <div class="pricing-box bg-gray-primary">
-                <div class="pricing-box-tittle">Expirience</div>
+                <div class="pricing-box-tittle">Experience</div>
                 <p>Changing life session</p>
                 <hr/>
                 <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">69</span></div>
@@ -287,7 +287,7 @@
                   <div class="item-description wow fadeInUp" data-wow-delay=".3s">
                     <p> The most important part was that Gosia showed me how to be truly free and align with myself.
 						The hypnosis was really personal and opened my eyes to how to be free from my blocks and to recognize when I step into my traumas but also step out of them. 
-					    After the session, I felt I am healed. I would recommend Gosia as a Hypnotherapist.
+					    After the session, I felt I was healed. I would recommend Gosia as a Hypnotherapist.
 					</p>
                     <div class="item-subsection"><span class="item-subsection-title devider-left">Edina</span><span>Client</span></div>
                   </div>
