--- a/contacts.html
+++ b/contacts.html
@@ -94,8 +94,8 @@
             <div class="col-xl-8 text-center">
               <h1 class="font-weight-bold wow fadeInLeft">Contact Me</h1>
 			  <h3 class="font-weight-bold wow fadeInLeft">call: +44 7758748210</h3></br></br>
-              <h3 class="font-weight-bold wow fadeInLeft">or send your question below</h3>
-			  <p class="intro-description wow fadeInRight">I mostly respond within 24 hours.</p>
+              <h3 class="font-weight-bold wow fadeInLeft">or send your questions below</h3>
+			  <p class="intro-description wow fadeInRight">I usually respond within 24 hours.</p>
             </div>
           </div>
         </div>
