--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
 					I have become a <span class="default-letter-spacing font-weight-bold ">spiritual life coach</span>. I help people who are going through an awakening, which 
 					might have been triggered by narcissistic abuse or painful experiences. 
 					I help my clients to refocus from trauma bonds, cognitive dissonances, or narcissistic abuse towards their potential and start exploring its true nature.</p>
-                <p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I am Accredited Elite Life Coach, Level 5, Certified by the IAPC&M</p>
+                <!--<p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I am Accredited Elite Life Coach, Level 5, Certified by the IAPC&M</p>
 				<a href="https://coach-accreditation.services/" target="_blank">
 					<img src="images/IAPCM-Logo-_2020-update-RGB-web-large.png" alt="Girl in a jacket" width="500" height="600">
-					<div style="text-align: center;">www.coach-accreditation.services</div>
+					<div style="text-align: center;">www.coach-accreditation.services</div>-->
 				</a>
 				<div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
               </div>
