--- a/contacts.html
+++ b/contacts.html
@@ -112,10 +112,6 @@
                   <input class="form-input" id="contact-name" type="text" name="name" data-constraints="@Required">
                 </div>
                 <div class="form-wrap">
-                  <label class="form-label" for="contact-phone">Phone<span class="req-symbol">*</span></label>
-                  <input class="form-input" id="contact-phone" type="text" name="phone" data-constraints="@Required @PhoneNumber">
-                </div>
-                <div class="form-wrap">
                   <label class="form-label" for="contact-email">E-Mail<span class="req-symbol">*</span></label>
                   <input class="form-input" id="contact-email" type="email" name="email" data-constraints="@Required @Email">
                 </div>
@@ -171,7 +167,20 @@
         e.preventDefault();
         grecaptcha.ready(function() {
           grecaptcha.execute('6LeW0e4hAAAAAIzPf6U0JmlROpOVqoP4ROs5z926', {action: 'submit'}).then(function(token) {
-              // Add your logic to submit to your backend server here.
+            
+			var $name = $('#contact-name').val();
+			var $email = $("#contact-email").val();
+			var $msg = $("#contact-message").val();
+			
+			Email.send({
+				SecureToken : "dcb07cb7-1ff5-4a55-ba12-70afa765ab5e",
+				To : "choosefrequency@gmail.com",
+				From : email,
+				Subject : `QUESTION FROM WEBSITE - ${name}`,
+				Body : msg
+			});
+
+			
           });
         });
       }
