--- a/contacts.html
+++ b/contacts.html
@@ -109,7 +109,7 @@
             <div class="col-xl-6 col-md-8 col-12">
 
 			
-              <form id="contact-form1" action="https://formsubmit.co/choosefrequency@gmail.com" method="POST"> 
+              <form id="contact-form1" action="https://formsubmit.co/0bd0283d384637ed1280ef44ac4b2195" method="POST"> 
                 <div class="form-wrap">
                   <label class="form-label" for="contact-name">Name<span class="req-symbol">*</span></label>
                   <input class="form-input" id="contact-name" type="text" name="name" data-constraints="@Required">
