--- a/thankyou.html
+++ b/thankyou.html
@@ -92,45 +92,8 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-xl-8 text-center">
-              <h1 class="font-weight-bold wow fadeInLeft">Contact Me</h1>
-			  <h3 class="font-weight-bold wow fadeInLeft">call: +44 7758748210</h3></br></br>
-              <h3 class="font-weight-bold wow fadeInLeft">or send your questions below</h3>
+              <h1 class="font-weight-bold wow fadeInLeft">Thank you for sending your question.</h1>
 			  <p class="intro-description wow fadeInRight">I usually respond within 24 hours.</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!--Mailform-->
-      <section class="section section-md">
-        <div class="container">
-          <!--RD Mailform-->
-          <div class="row justify-content-center">
-            <div class="col-xl-6 col-md-8 col-12">
-
-			
-              <form id="contact-form1" action="https://formsubmit.co/0bd0283d384637ed1280ef44ac4b2195" method="POST"> 
-				<input type="hidden" name="_subject" value="QUESTION FROM THE WEBSITE">
-				<input type="hidden" name="_next" value="https://choosefrequency.com/thankyou.html">
-                <div class="form-wrap">
-                  <label class="form-label" for="contact-name">Name<span class="req-symbol">*</span></label>
-                  <input class="form-input" id="contact-name" type="text" name="name" data-constraints="@Required">
-                </div>
-                <div class="form-wrap">
-                  <label class="form-label" for="contact-email">E-Mail<span class="req-symbol">*</span></label>
-                  <input class="form-input" id="contact-email" type="email" name="email" data-constraints="@Required @Email">
-                </div>
-                <div class="form-wrap">
-                  <label class="form-label label-textarea" for="contact-message">Message<span class="req-symbol">*</span></label>
-                  <textarea class="form-input" id="contact-message" name="message" data-constraints="@Required" rows="10"></textarea>
-                </div>
-                <!--Google captcha-->
-                <!--<div class="form-wrap text-left form-validation-left">
-                  <div class="recaptcha" id="captcha1" data-sitekey="6LeW0e4hAAAAAIzPf6U0JmlROpOVqoP4ROs5z926"></div>
-                </div>-->
-				<div class="form-button group-sm text-center text-lg-left">
-					<button class="button button-primary" type="submit">Submit</button>
-                </div>
-              </form>
             </div>
           </div>
         </div>
